<resources>
    <string name="app_name">Flowbyte</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_library">Library</string>
    <string name="song_title">Dummy Title</string>
    <string name="song_lyrics_title">Lyrics</string>
    <string name="no_lyrics">No Lyrics</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae ducimus iusto minima molestias neque placeat quae qui tempora. Aliquid architecto asperiores aut beatae deleniti distinctio dolore dolorum ducimus eaque eos exercitationem fugiat hic ipsa ipsum itaque iusto labore maxime mollitia nihil non nostrum obcaecati officia pariatur perspiciatis possimus quae quas quia, quibusdam quisquam repudiandae saepe similique sunt tenetur, unde ut veritatis voluptatibus. Ex laborum omnis optio provident reprehenderit tempora ullam? Ad consequatur impedit nam odio recusandae reprehenderit sunt vel! Nesciunt, nihil, quod. Autem consectetur corporis cumque cupiditate earum error fuga laborum, non odio provident quasi quidem repudiandae sint totam ullam?
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="getting_started">getting started</string>
    <string name="the_weeeknd">the weeeknd</string>
    <string name="the_weeknd">the weeknd</string>
    <string name="ariana_grande">Ariana Grande</string>
    <string name="lorum_ipsum_dolor">lorum ipsum dolor</string>
    <string name="the_weeekndw">The Weeeknd</string>
    <string name="after_hoursby_the_weeknd_is_a_highly_anticipated">After Hoursby The Weeknd is a highly anticipated...</string>
    <string name="song_playing_from_playlist">PLAYING FROM PLAYLIST:</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- About Text  -->
    <string name="AboutThisApp">
        Aplikasi FlowByte merupakan aplikasi untuk mendegarkan musik, dimana pengguna dapat mendengar, menyimpan musik ke dalam playlist, dan membuat playlist musik sesuai keinginan. Aplikasi ini kami buat untuk memenuhi ujian akhir semester 6 untuk matakuliah pemrograman mobile yang diampu oleh bu Ruth Mariana Bunga Wadu, S.Kom., MMSI.
    </string>
    <string name="Aulia">Auila El Ihza fariz Rafiqi (2110511003)</string>
    <string name="Aqil">Abdullah Aqil Athalla (2110511005)</string>
    <string name="Pandu">Pandu Utomo (2110511007)</string>
    <string name="Rana">Rana Ekakurnia Fathin (2110511059)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_image" />
</resources>