<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:elevation="4dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About This App"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:paddingBottom="16dp"
            android:fontFamily="@font/gothic_b"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AboutThisApp"
            android:paddingBottom="16dp"
            android:justificationMode="inter_word"
            android:fontFamily="@font/gothic_bi"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Author"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:paddingBottom="8dp"
                android:fontFamily="@font/gothic_b"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aulia"
                android:paddingBottom="8dp"
                android:fontFamily="@font/gothic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aqil"
                android:paddingBottom="8dp"
                android:fontFamily="@font/gothic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pandu"
                android:paddingBottom="8dp"
                android:fontFamily="@font/gothic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rana"
                android:paddingBottom="8dp"
                android:fontFamily="@font/gothic"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            android:paddingBottom="8dp"
            android:fontFamily="@font/gothic_b"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2110511003@mahasiswa.upnvj.ac.id"
            android:paddingBottom="4dp"
            android:fontFamily="@font/gothic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2110511005@mahasiswa.upnvj.ac.id"
            android:paddingBottom="4dp"
            android:fontFamily="@font/gothic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2110511007@mahasiswa.upnvj.ac.id"
            android:paddingBottom="4dp"
            android:fontFamily="@font/gothic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2110511059@mahasiswa.upnvj.ac.id"
            android:paddingBottom="4dp"
            android:fontFamily="@font/gothic"/>

    </LinearLayout>

</ScrollView>